Aggiunto il diagramma er nella cartella db, con lo schema nel file xml, aggiunta di pagine jsp, modifica del codice per le classi bean le classi model ed per le classi in cui ci sono le istruzioni sql.