@@ -1,6 +1,9 @@
 package it.unisa.control;
 
 import java.util.ArrayList;
+import java.util.List;
+import java.util.logging.Logger;
+import java.util.logging.Level;
 import java.io.IOException;
 import java.sql.SQLException;
 import javax.servlet.RequestDispatcher;
@@ -13,50 +16,92 @@ import javax.servlet.http.HttpSession;
 import it.unisa.model.ProgettoFormativoBean;
 import it.unisa.model.TutorBean;
 import it.unisa.model.TutorModelDM;
+import it.unisa.model.ProgettoFormativoModelDM;
+import it.unisa.model.AbstractBean;
 
+/**
+ * Servlet implementation class TirociniTutorServlet
+ */
 @WebServlet("/TirociniTutorServlet")
 public class TirociniTutorServlet extends HttpServlet {
 
+  private static final ProgettoFormativoModelDM progettoFormativoModelDM = new ProgettoFormativoModelDM();
+  private static final TutorModelDM tutorModelDM = new TutorModelDM();
+  
+  /**
+   * @see HttpServlet#HttpServlet()
+   */
+  public TirociniTutorServlet() {
+    super();
+  }
+  
+  /**
+   * @see HttpServlet#doGet(HttpServletRequest request, HttpServletResponse response)
+   */
   @Override
   protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
     HttpSession session = request.getSession(false);
-    ArrayList<ProgettoFormativoBean> tirociniBean = null;
+    List<AbstractBean> tirociniBean = null;
     TutorBean tutorBean = null;
-    Boolean login = new Boolean(false);
+    String idTutorParameter = request.getParameter("idTutor");
+    int idTutor = -1;
+    
+    if (idTutorParameter != null) {
+      if (!idTutorParameter.equals("")) {
+        idTutor = Integer.valueOf(idTutorParameter);
+      } else {
+        Logger.getGlobal().log(Level.INFO, "idTutorParameter stringa vuota nella ricerca di tirocini da parte di un tutor");
+        //redirect to an [error] page
+      }
+    } else {
+      Logger.getGlobal().log(Level.INFO, "idTutorParameter nullo nella ricerca di tirocini da parte di un tutor");
+      //redirect to an [error] page
+    }
     
     if (session != null) {
-      tutorBean = (TutorBean)session.getAttribute("SessionTutor");
-      login = (Boolean)session.getAttribute("Loggato");
-      
+      tutorBean = (TutorBean) session.getAttribute("SessionTutor");
       if (tutorBean != null) {
-        tirociniBean = (ArrayList<ProgettoFormativoBean>)session.getAttribute("SessionTirocini");
+        tirociniBean = (List<AbstractBean>) session.getAttribute("SessionTirocini");
         if (tirociniBean == null) {
-          try {
-            tirociniBean = TutorModelDM.loadTirociniTutor(tutorBean);
-          } catch(SQLException e) {
+          if (idTutor >= 0) {
+            try {
+              tutorBean = (TutorBean) tutorModelDM.doRetrieveByKey(idTutor);
+            } catch (SQLException e) {
+              Logger.getGlobal().log(Level.SEVERE, e.getMessage());
+              //redirect to an [error] page
+            }
+          } else {
+            Logger.getGlobal().log(Level.INFO, "idTutor negativo nella ricerca di tirocini da parte di un tutor");
             //redirect to an [error] page
+          }
+          
+          if (tutorBean != null) {
+            try {
+              tirociniBean = (List<AbstractBean>) progettoFormativoModelDM.doRetrieveByTutor(tutorBean.getID());
+            } catch(SQLException e) {
+              Logger.getGlobal().log(Level.SEVERE, e.getMessage());
+              //redirect to an [error] page
+            }
           }
         }
         
-        if (login == new Boolean(true) && tirociniBean != null) {
-          RequestDispatcher view = request.getRequestDispatcher("tirocini-tutor-page.jsp");
-          view.forward(request, response);
-        } else {
-          //redirect to an [error] page
-        }
       } else {
-        session.setAttribute("Loggato", new Boolean(false));
+        Logger.getGlobal().log(Level.INFO, "Il Tutor non risulta loggato");
         RequestDispatcher view = request.getRequestDispatcher("login-page.jsp");
         view.forward(request, response);
         return;
       }
     } else {
+      Logger.getGlobal().log(Level.INFO, "Nessuna sessione nella ricerca di tirocini da parte di un tutor");
       RequestDispatcher view = request.getRequestDispatcher("login-page.jsp");
       view.forward(request, response);
       return;
     }
   }
 
+  /**
+   * @see HttpServlet#doPost(HttpServletRequest request, HttpServletResponse response)
+   */
   @Override
   protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
     doGet(request, response);
